--- a/uptick-movie-app/src/index.css
+++ b/uptick-movie-app/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background-color: rgb(17, 17, 17);
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
